fix: [MGS-5092] [Minicart Offcanvas carousel] Hide carousel on vertical tablet and show 2 tiles on horizonatal tablet in order to avoid too small tiles

--- a/src/components/minicart/minicart.scss
+++ b/src/components/minicart/minicart.scss
@@ -39,6 +39,7 @@ $minicart_offcanvas-carousel-button-spacing: 3rem !default;
 /* prettier-ignore */
 $minicart_offcanvas-carousel-transition: opacity $transition-default-time ease-in !default;
 $minicart_offcanvas-carousel-spinner-size: 11rem !default;
+$minicart_offcanvas-carousel-spacing-breakpoint: '>=laptop';
 
 $minicart_padding: 2rem 0 !default;
 
@@ -451,7 +452,9 @@ $minicart_button-carousel-icon-pos: $button_default-icon-pos !default;
             }
 
             .minicart-offcanvas-open & {
-                @include media('>=tablet') {
+                @include media(
+                    '#{$minicart_offcanvas-carousel-spacing-breakpoint}'
+                ) {
                     display: block;
                 }
             }
